# EZ-CorridorKey

./: CLAUDE.md  pyproject.toml  requirements.txt
.github/workflows/: fresh-install-smoke.yml
_entity/: auto_roto_pipeline_research.md  auto_segmentation_pipeline.md  cryptomatte_specification.md  deep_research_sam2_vfx_mechanics.md  demo_links.md  keying_matting_landscape.md  mega_research_summary.md  nuke_integration_ml_masks.md  osint_forum_feedback_ai_roto.md  sam2_mask_edge_flickering_solutions.md  tool_catalog.md
scripts/: generate_cryptomatte_exr.py
tests/: test_run_update_xplat.py
